--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,8 @@
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href='./index.html' class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="./projects.html" class="nav-link px-2 link-dark">Projects and Photos</a></li>
+                <li><a href='./index.html' class="nav-link px-2 link-dark">Home</a></li>
+                <li><a href="./projects.html" class="nav-link px-2 link-secondary">Projects and Photos</a></li>
                 <li><a href="./contact.html" class="nav-link px-2 link-dark">Contact us</a></li>
 
             </ul>
@@ -137,6 +137,7 @@
                 </div>
             </div>
 
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00cba9" fill-opacity="1" d="M0,64L80,80C160,96,320,128,480,122.7C640,117,800,75,960,64C1120,53,1280,75,1360,85.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
 
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
