Added most of website asthetic

--- a/contact.html
+++ b/contact.html
@@ -40,38 +40,7 @@
         <p></p>
     </div>
 
-    <!-- <div class='row mb-4'>
-        <div class="col-12  d-flex justify-content-center">
-
-
-            <div class="card" style="width: 30rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Steve Nicholson</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Project manager</h6>
-                    <p class="card-text">Phone: 210-863-1286 Email: steve@hci-gc.com .</p>
-                    <a href="#" class="card-link">Click to open email</a>
-                    
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class='row mb-2'>
-        <div class="col-12 d-flex justify-content-center">
-
-            <div class="card" style="width: 30rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
-                </div>
-            </div>
-
-        </div>
-    </div> -->
+    
 
   
     <div class="row col-md-3 d-flex justify-content-center bg-light ">
@@ -81,7 +50,7 @@
     <div class='row'>
         <div class='col-3'>
         </div>
-        <div class='col-6'>
+        <div class='col-6' id='middleContent'>
 
 
 
