--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 <body>
 
 
+    <!-- Nav Bar ------------------------------------------------------------------------>
+
+
+
     <div class="container">
-        
+
         <header
-            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-5 mb-4 border-bottom">
             <a href="./assets/hci general contractors.png"
                 class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
@@ -27,9 +31,9 @@
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="./index.html" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="./projects.html" class="nav-link px-2 link-dark">Projects and Photos</a></li>
-                <li><a href="./contact.html" class="nav-link px-2 link-dark">Contact us</a></li>
+                <li><a href="./index.html" class="nav-link px-4 link-secondary">Home</a></li>
+                <li><a href="./projects.html" class="nav-link px-4 link-dark">Projects and Photos</a></li>
+                <li><a href="./contact.html" class="nav-link px-4 link-dark">Contact us</a></li>
 
             </ul>
 
@@ -39,11 +43,16 @@
         </header>
     </div>
 
+
+    <!-- Hero content ------------------------------------------------------------------------>
+
+
+
     <div class="container col-xxl-8 px-4 py-5 border-bottom">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img src="./assets/HCI LOGO0 White Clear.png" class="d-block mx-lg-auto img-fluid"
-                    alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                <img src="./assets/HCI LOGO0 White Clear.png" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
+                    width="700" height="500" loading="lazy">
             </div>
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold lh-1 mb-3">HCI General Contractors</h1>
@@ -55,11 +64,54 @@
         </div>
     </div>
 
+
+    <!-- Image container ------------------------------------------------------------------------>
+
+    
+
+
+    <div class="container col-xxl-8 px-4 py-5 border-bottom">
+        <div class="row flex-lg-row-reverse  g-3 py-5">
+            <div class="col-sm-12 col-lg-4">
+                <img src="./assets/construction-silhouette.jpg" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
+                    width="700" height="500" loading="lazy">
+            </div>
+            <div class="col-lg-4">
+                <img src="./assets/construction-site-silhouettes.jpg" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
+                    width="700" height="500" loading="lazy">
+            </div>
+                <div class="col-lg-4">
+                    <img src="./assets/construction-silhouette (1).jpg" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
+                    width="700" height="500" loading="lazy">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+ 
+
+
+
+    <!-- Wave ------------------------------------------------------------------------>
+
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#00cba9" fill-opacity="1"
             d="M0,64L80,80C160,96,320,128,480,122.7C640,117,800,75,960,64C1120,53,1280,75,1360,85.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
         </path>
     </svg>
+
+    <!-- Credits---------------------------------------------------------------------- -->
+
+    <div class="container">
+        <span class="text-muted .5rem">Image credits :
+            <a href='https://www.freepik.com/photos/people'>People photo created by jcomp - www.freepik.com</a>
+            <a href='https://www.freepik.com/photos/frame'>Frame photo created by evening_tao -
+                www.freepik.com</a>
+            <a href='https://www.freepik.com/photos/background'>Background photo created by evening_tao -
+                www.freepik.com</a>
+            </span>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
