--- a/projects.html
+++ b/projects.html
@@ -16,24 +16,19 @@
 
 
     <div class="container">
+
         <header
-            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-5 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
+            class="d-flex  justify-content-center  py-5 mb-4 border-bottom">
+            
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href='./index.html' class="nav-link px-4 link-dark">Home</a></li>
-                <li><a href="./projects.html" class="nav-link px-4 link-secondary">Projects and Photos</a></li>
+                <li><a href="./index.html" class="nav-link px-4 link-secondary">Home</a></li>
+                <li><a href="./projects.html" class="nav-link px-4 link-dark">Projects and Photos</a></li>
                 <li><a href="./contact.html" class="nav-link px-4 link-dark">Contact us</a></li>
 
             </ul>
 
-            <div class="col-md-3 text-end">
-
-            </div>
+            
         </header>
     </div>
 
