--- a/contact.html
+++ b/contact.html
@@ -22,17 +22,16 @@
             class="d-flex  justify-content-center  py-5 mb-4 border-bottom">
             
 
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="./index.html" class="nav-link px-4 link-secondary">Home</a></li>
-                <li><a href="./projects.html" class="nav-link px-4 link-dark">Projects and Photos</a></li>
-                <li><a href="./contact.html" class="nav-link px-4 link-dark">Contact us</a></li>
+            <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                <h3><a href="./index.html" class="nav-link px-4 link-dark">Home</a></h3>
+                <h3><a href="./projects.html" class="nav-link px-4 link-dark">Projects and Photos</a></h3>
+                <h3><a href="./contact.html" class="nav-link px-4 link-secondary">Contact us</a></h3>
 
-            </ul>
+            </div>
 
             
         </header>
     </div>
-
     <div class='row'>
         <p></p>
     </div>
