--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,15 @@
           <div class="carousel-item">
             <img src="./IMG_0573.jpg" class="d-block w-100" height="600" width="400" alt="...">
           </div>
+          <div class="carousel-item">
+            <img src="./IMG_1241.jpg" class="d-block w-100" height="600" width="400" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./IMG_1825.jpg" class="d-block w-100" height="600" width="400" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./IMG_1895.jpg" class="d-block w-100" height="600" width="400" alt="...">
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
