--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-    <div class="container">
+    <div class="container ">
 
         <header class="d-flex  justify-content-center  py-5 mb-4 border-bottom">
 
@@ -38,9 +38,9 @@
 
     <!-- Hero content ------------------------------------------------------------------------>
 
+<div class="container" id="testContent">
 
-
-    <div class="container col-xxl-8 px-4 py-5 border-bottom">
+    <div class="container col-xxl-8 px-4 py-5 border-bottom " >
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="./assets/HCI LOGO0 White Clear.png" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
@@ -59,12 +59,12 @@
             </div>
         </div>
     </div>
-
+</div>
 
     <!-- Image container ------------------------------------------------------------------------>
 
 
-
+<div id='picturesBackground'>
 
     <div class="container col-xxl-8 px-4 py-5 border-bottom">
         <div class="row flex-lg-row-reverse  g-3 py-5">
@@ -85,8 +85,7 @@
     </div>
     </div>
 
-
-
+</div>
 
 
     <!-- Wave ------------------------------------------------------------------------>
