--- a/index.html
+++ b/index.html
@@ -38,66 +38,76 @@
 
     <!-- Hero content ------------------------------------------------------------------------>
 
-<div class="container" id="testContent">
+    <div id='mainContent'>
 
-    <div class="container col-xxl-8 px-4 py-5 border-bottom " >
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-            <div class="col-10 col-sm-8 col-lg-6">
-                <img src="./assets/HCI LOGO0 White Clear.png" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
-                    width="700" height="500" loading="lazy">
+        <div class="container" id="testContent">
+
+            <div class="container col-xxl-8 px-4 py-5 border-bottom ">
+                <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                    <div class="col-10 col-sm-8 col-lg-6">
+                        <img src="./assets/HCI LOGO0 White Clear.png" class="d-block mx-lg-auto img-fluid"
+                            alt="HCI logo" width="700" height="500" loading="lazy">
+                    </div>
+                    <div class="col-lg-6" id="textContainerMain">
+                        <h1 class="display-5 fw-bold lh-1 mb-3">HCI General Contractors</h1>
+                        <p class="lead">HCI is a full-service commercial general contractor specializing in interior
+                            finish
+                            outs
+                            and large/small scale renovations. With operations starting in 1999, HCI has served in
+                            retail,
+                            medical, hospitality, industrial, education, and many more. Our goal is to provide the
+                            highest
+                            quality work and the best possible construction experience from our initial meeting,
+                            throughout
+                            the
+                            construction phases, to final project completion.</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">HCI General Contractors</h1>
-                <p class="lead">HCI is a full-service commercial general contractor specializing in interior finish outs
-                    and large/small scale renovations. With operations starting in 1999, HCI has served in retail,
-                    medical, hospitality, industrial, education, and many more. Our goal is to provide the highest
-                    quality work and the best possible construction experience from our initial meeting, throughout the
-                    construction phases, to final project completion.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        </div>
+
+        <!-- Image container ------------------------------------------------------------------------>
+
+        <!-- 
+    <div id='picturesBackground'>
+
+        <div class="container col-xxl-8 px-4 py-5 border-bottom">
+            <div class="row flex-lg-row-reverse  g-3 py-5">
+                <div class="col-sm-12 col-lg-4">
+                    <img src="./assets/construction-silhouette.jpg" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
+                        width="700" height="500" loading="lazy">
+                </div>
+                <div class="col-lg-4">
+                    <img src="./assets/construction-site-silhouettes.jpg" class="d-block mx-lg-auto img-fluid"
+                        alt="HCI logo" width="700" height="500" loading="lazy">
+                </div>
+                <div class="col-lg-4">
+                    <img src="./assets/construction-silhouette (1).jpg" class="d-block mx-lg-auto img-fluid"
+                        alt="HCI logo" width="700" height="500" loading="lazy">
 
                 </div>
             </div>
         </div>
+    </div> -->
+
+
+
     </div>
-</div>
-
-    <!-- Image container ------------------------------------------------------------------------>
-
-
-<div id='picturesBackground'>
-
-    <div class="container col-xxl-8 px-4 py-5 border-bottom">
-        <div class="row flex-lg-row-reverse  g-3 py-5">
-            <div class="col-sm-12 col-lg-4">
-                <img src="./assets/construction-silhouette.jpg" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
-                    width="700" height="500" loading="lazy">
-            </div>
-            <div class="col-lg-4">
-                <img src="./assets/construction-site-silhouettes.jpg" class="d-block mx-lg-auto img-fluid"
-                    alt="HCI logo" width="700" height="500" loading="lazy">
-            </div>
-            <div class="col-lg-4">
-                <img src="./assets/construction-silhouette (1).jpg" class="d-block mx-lg-auto img-fluid" alt="HCI logo"
-                    width="700" height="500" loading="lazy">
-
-            </div>
-        </div>
-    </div>
-    </div>
-
-</div>
 
 
     <!-- Wave ------------------------------------------------------------------------>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#00cba9" fill-opacity="1"
-            d="M0,64L80,80C160,96,320,128,480,122.7C640,117,800,75,960,64C1120,53,1280,75,1360,85.3L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+        <path fill="#1F555F" fill-opacity="1"
+            d="M0,64L48,90.7C96,117,192,171,288,170.7C384,171,480,117,576,117.3C672,117,768,171,864,192C960,213,1056,203,1152,165.3C1248,128,1344,64,1392,32L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
         </path>
     </svg>
 
     <!-- Credits---------------------------------------------------------------------- -->
-
+<!-- 
     <div class="container">
         <span class="text-muted .5rem">Image credits :
             <a href='https://www.freepik.com/photos/people'>People photo created by jcomp - www.freepik.com</a>
@@ -106,7 +116,7 @@
             <a href='https://www.freepik.com/photos/background'>Background photo created by evening_tao -
                 www.freepik.com</a>
         </span>
-    </div>
+    </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
