added slide show items

--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,20 @@
                 <div class="carousel-item">
                     <img src="./IMG_1895.jpg" class="d-block w-100" height="600" width="400" alt="...">
                 </div>
+                <div class="carousel-item">
+                    <img src="./assets/scottimg1" class="d-block w-100" height="600" width="400" alt="...">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="./assets/scottimg2" class="d-block w-100" height="600" width="400" alt="...">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="./assets/scottimg3" class="d-block w-100" height="600" width="400" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/scottimg4" class="d-block w-100" height="600" width="400" alt="...">
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                 data-bs-slide="prev">
